# recipe

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: deploy.yml  e2e.yml  test.yml
e2e/: cooking-page.spec.ts  happy-path.spec.ts  language-switcher.spec.ts  recipe-filters.spec.ts  recipe-images.spec.ts
img_generator/: README.md  generate_crepe_images.sh  generate_images.py  prompts.json  pyproject.toml
src/: App.tsx  index.css  main.tsx
src/components/common/: Button.css  Button.tsx  Card.css  Card.tsx  Checkbox.css  Checkbox.tsx  ConfirmDialog.css  ConfirmDialog.tsx  NumberInput.css  NumberInput.tsx  index.ts
src/components/cooking/: RecipeInstructionCard.css  RecipeInstructionCard.tsx
src/components/layout/: Header.css  Header.tsx  (+3 more)
src/context/: RecipeContext.tsx  ShoppingListContext.tsx  index.ts
src/data/: recipes.json
src/hooks/: index.ts  useLocalStorage.ts  useRecipeLocale.ts
src/i18n/: index.ts
src/pages/: CookingPage.css  CookingPage.tsx
src/types/: Ingredient.ts  Recipe.ts  ShoppingList.ts  index.ts
src/utils/: index.ts  ingredientAggregator.ts  ingredientImage.ts  quantityScaler.ts  recipeFilters.ts  storage.ts
test/context/: RecipeContext.test.tsx
test/hooks/: useLocalStorage.test.ts  useRecipeLocale.test.ts
test/locales/: localeKeyParity.test.ts
test/pages/: CookingPage.test.tsx
test/utils/: ingredientAggregator.test.ts  quantityScaler.test.ts  recipeFilters.test.ts  storage.test.ts
(+35 files in other folders)
