[project]
name = "recipe-image-generator"
version = "0.1.0"
description = "Generate recipe images using Stable Diffusion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "diffusers>=0.24.0",
    "transformers>=4.35.0",
    "accelerate>=0.25.0",
    "Pillow>=10.0.0",
    "peft>=0.7.0",
]

[project.scripts]
generate-images = "generate_images:main"
