[project]
name = "recipe-image-generator"
version = "0.1.0"
description = "Generate recipe images using Stable Diffusion"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "diffusers==0.35.0",
    "transformers==5.0.0",
    "accelerate==1.12.0",
    "Pillow==10.3.0",
    "peft==0.18.1",
    "numpy==2.4.1",
]

[project.scripts]
generate-images = "generate_images:main"

[tool.uv]
dev-dependencies = []
